WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117731
[WebSpeech] Speech Recognition requires convertValue support in JSDictionary
https://bugs.webkit.org/show_bug.cgi?id=117731
Summary
[WebSpeech] Speech Recognition requires convertValue support in JSDictionary
Praveen Jadhav
Reported
2013-06-18 03:14:06 PDT
Build error occurs while after enabling Speech Recognition feature. In file included from /home/praveen.j/WebKit/WebKitBuild/Release/DerivedSources/WebCore/JSSpeechRecognitionEvent.cpp:28:0: /home/praveen.j/WebKit/Source/WebCore/bindings/js/JSDictionary.h: In member function ‘WebCore::JSDictionary::GetPropertyResult WebCore::JSDictionary::tryGetPropertyAndResult(const char*, T*, void (*)(T*, const Result&)) const [with T = WTF::RefPtr<WebCore::SpeechRecognitionResultList>, Result = WTF::RefPtr<WebCore::SpeechRecognitionResultList>]’: /home/praveen.j/WebKit/Source/WebCore/bindings/js/JSDictionary.h:144:107: instantiated from ‘bool WebCore::JSDictionary::tryGetProperty(const char*, Result&) const [with Result = WTF::RefPtr<WebCore::SpeechRecognitionResultList>]’ /home/praveen.j/WebKit/WebKitBuild/Release/DerivedSources/WebCore/JSSpeechRecognitionEvent.cpp:98:64: instantiated from here /home/praveen.j/WebKit/Source/WebCore/bindings/js/JSDictionary.h:163:9: error: no matching function for call to ‘WebCore::JSDictionary::convertValue(JSC::ExecState* const&, JSC::JSValue&, WTF::RefPtr<WebCore::SpeechRecognitionResultList>&) const’
Attachments
Patch
(2.58 KB, patch)
2013-06-18 03:33 PDT
,
Praveen Jadhav
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Praveen Jadhav
Comment 1
2013-06-18 03:33:04 PDT
Created
attachment 204894
[details]
Patch
Chris Dumez
Comment 2
2013-06-18 03:48:48 PDT
Comment on
attachment 204894
[details]
Patch LGTM, r=me.
WebKit Commit Bot
Comment 3
2013-06-18 04:22:41 PDT
The commit-queue encountered the following flaky tests while processing
attachment 204894
[details]
: media/track/track-remove-crash.html
bug 115892
(author:
eric.carlson@apple.com
) svg/batik/filters/feTile.svg
bug 114375
(authors:
krit@webkit.org
and
zimmermann@kde.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2013-06-18 04:23:57 PDT
Comment on
attachment 204894
[details]
Patch Clearing flags on attachment: 204894 Committed
r151680
: <
http://trac.webkit.org/changeset/151680
>
WebKit Commit Bot
Comment 5
2013-06-18 04:24:00 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6
2014-04-24 16:46:01 PDT
Moving all JavaScriptGlue bugs to JavaScriptCore. The JavaScriptGlue framework itself is long gone. And most of the more recent bugs put in this component were put there by people who thought this was for some other aspect of “JavaScript glue” and have nothing to do with the actual original reason for the existence of this component, which was an OS-X-only framework named JavaScriptGlue.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug