[WebSpeech] Speech Recognition requires convertValue support in JSDictionary https://bugs.webkit.org/show_bug.cgi?id=117731

Patch by Praveen R Jadhav <praveen.j@samsung.com> on 2013-06-18
Reviewed by Christophe Dumez.

Build fails after enabling ENABLE_SCRIPTED_SPEECH feature. This patch
resolves the issue.

No new tests. No change in behaviour.

* bindings/js/JSDictionary.cpp:
(WebCore::JSDictionary::convertValue):
* bindings/js/JSDictionary.h:

Canonical link: https://commits.webkit.org/135873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151680 268f45cc-cd09-0410-ab3c-d52691b4dbfc